--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="icon" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="customize.css">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
 </head>
 
 <body class="d-flex h-100 text-center text-white bg-dark" style="font: 12px '.AppleSystemUIFont'">
@@ -47,7 +51,7 @@
                                role="button"
                                data-bs-toggle="dropdown"
                                aria-expanded="false"
-                               href="#">
+                               href="team.html">
                                 TEAM
                             </a>
                             <ul class="dropdown-menu"
@@ -70,12 +74,12 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="contact.html">
                                 CONTACT
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="About.html">
                                 ABOUT US
                             </a>
                         </li>
@@ -88,38 +92,117 @@
     <header class="bg-light" style="height: 71px"></header>
 
     <main>
-        <section class="bg-light pb-1" style="height: 100%">
-            <img class="img-fluid h-100 w-100 p-0" src="images/Macbook_Repair.huge" style="object-fit: cover" alt="">
-            <p style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">Hello</p>
-            <button type="button"  style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">Click Me</button>
+        <section class="first-section bg-light pb-1" style="height: 100vh;">
+            <div class="p-0 m-0 w-100 h-100 d-flex position-relative justify-content-center"
+                 style="object-fit: cover; background-image: url(images/Macbook_Repair.huge); height: 100vh; width: 100vh; background-size: cover; text-shadow: 1px 1px 2px rgba(0,0,0,0.5)">
+                <h1 id="DiscountCode"
+                    class="position-absolute text-white"
+                    style="top:50%">
+                    Get 60% Off using Code: HOLIDAY <i class="fa-regular fa-copy"></i>
+                </h1>
+                <h2 class="position-absolute"
+                    style="top: 70%">
+                    Macbook Repair
+                </h2>
+                <a class="position-absolute"
+                   href="#"
+                   style="top: 80%">
+                    <button type="button">
+                        Learn more
+                    </button>
+                </a>
+            </div>
         </section>
 
-        <section class="bg-light" style="height: 100%;">
-            <div class="container-fluid h-100 w-100 p-0" id="gridContainer">
+        <section class="second-section bg-light" style="height: 150vh;">
+            <div class="container-fluid h-100 w-100 p-0"
+                 id="gridContainer"
+                 style="text-shadow: 1px 1px 2px rgba(0,0,0,0.5)">
                 <div class="row row-cols-1 row-cols-md-2 h-100 w-100 m-0">
-                    <div class="col bg-light p-0" style="object-fit: cover">
-                        <img class="img-fluid h-100 w-100 p-1" src="images/Apple_Watch_Repair.webp" alt="">
+                    <div class="col bg-light p-0 d-flex position-relative justify-content-center"
+                         style="background-image: url(images/Apple_Watch_Repair.webp); background-size: cover;">
+                        <h2 class="position-absolute"
+                            style="top: 70%">
+                            Apple Watch Repair
+                        </h2>
+                        <a class="position-absolute"
+                           href="#"
+                           style="top: 85%; text-decoration: none; color: #c1ced9">
+                            Learn more <i class="fa-solid fa-angle-right"></i>
+                        </a>
                     </div>
-                    <div class="col bg-light p-0" style="object-fit: cover">
-                        <img class="img-fluid h-100 w-100 p-1" src="images/Apple_Pencil_Repair.jpeg" alt="">
+                    <div class="col bg-light p-0 d-flex position-relative justify-content-center text-dark"
+                         style="background-image: url(images/Apple_Pencil_Repair.jpeg); background-size: cover; text-shadow: 1px 1px 2px rgba(253,252,252,0.5)">
+                        <h2 class="position-absolute"
+                            style="top: 70%">
+                            Apple Pencil Repair
+                        </h2>
+                        <a class="position-absolute"
+                           href="#"
+                           style="top: 85%; text-decoration: none; color: #c1ced9">
+                            Learn more <i class="fa-solid fa-angle-right"></i>
+                        </a>
                     </div>
-                    <div class="col bg-light p-0" style="object-fit: cover">
-                        <img class="img-fluid h-100 w-100 p-1" src="images/AirPods_Repair.webp" alt="">
+                    <div class="col bg-light p-0 d-flex position-relative justify-content-center"
+                         style="background-image: url(images/AirPods_Repair.webp); background-size: cover;">
+                        <h2 class="position-absolute"
+                            style="top: 70%">
+                            Airpods Repair
+                        </h2>
+                        <a class="position-absolute"
+                           href="#"
+                           style="top: 85%; text-decoration: none; color: #c1ced9">
+                            Learn more <i class="fa-solid fa-angle-right"></i>
+                        </a>
                     </div>
-                    <div class="col bg-light p-0" style="object-fit: cover">
-                        <img class="img-fluid h-100 w-100 p-1" src="images/iPad_Repair.jpeg" alt="">
+                    <div class="col bg-light p-0 d-flex position-relative justify-content-center"
+                         style="background-image: url(images/iPad_Repair.jpeg); background-size: cover;">
+                        <h2 class="position-absolute"
+                            style="top: 70%">
+                            iPad Repair
+                        </h2>
+                        <a class="position-absolute"
+                           href="#"
+                           style="top: 85%; text-decoration: none; color: #c1ced9">
+                            Learn more <i class="fa-solid fa-angle-right"></i>
+                        </a>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="bg-light pt-1" style="height: 100%">
-            <img class="img-fluid h-100 w-100 p-0" src="images/iPhone_Repair.jpeg" alt="">
+        <section class="third-section bg-light pb-1 pt-1" style="height: 120vh;">
+            <div class="p-0 m-0 w-100 h-100 d-flex position-relative justify-content-center"
+                 style="object-fit: cover; background-image: url(images/iPhone_Repair.jpeg); height: 100vh; width: 100vh; background-size: cover; text-shadow: 1px 1px 2px rgba(0,0,0,0.5)">
+                <h1 class="position-absolute text-white"
+                    style="top: 60%">
+                    iPhone Repair
+                </h1>
+
+
+                <button class="position-absolute"
+                        style="top: 80%;">
+                    Learn more
+                </button>
+            </div>
         </section>
     </main>
     <footer class="mt-auto text-white-50 bg-success" style="height: 20vh">
 
     </footer>
+
+    <script>
+        $(document).ready(function() {
+            $('#DiscountCode').click(function() {
+                let text = "HOLIDAY";
+                navigator.clipboard.writeText(text).then(function() {
+                    alert('Discount code copied');
+                }, function(err) {
+                    alert('Failed to copy text: ', err);
+                });
+            });
+        });
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </div>
