--- a/About.html
+++ b/About.html
@@ -7,6 +7,8 @@
     <link rel="icon" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="customize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 </head>
 
 <body class="d-flex h-100 text-center text-white bg-dark" style="font: 12px '.AppleSystemUIFont'">
@@ -86,7 +88,7 @@
     </header>
 
     <main>
-        <section class="first-section bg-light" style="height: 100vh;">
+        <section class="first-section bg-light" style="height: 120vh;">
             <div class="p-0 m-0 w-100 h-100 d-flex position-relative justify-content-start text-dark"
                  style="object-fit: cover; background-image: url(images/About_Us_1.png); height: 100vh; width: 100vh; background-size: cover">
                 <h1 id="DiscountCode"
@@ -106,65 +108,26 @@
     </main>
 
 <!-- Footer -->
-<footer class="py-5 px-5 bg-dark text-white">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="copyright">
-                    <p>&copy; 2023 Cybercore Technology, Inc. All rights reserved.</p>
-                    <p id="datetime"></p>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="d-flex justify-content-between">
-                    <div class="social-media">
-                        <p class="mb-4">Connect with us on social media:</p>
-                        <div class="social-media-icons">
-                            <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook"></a>
-                            <a href="https://twitter.com/?lang=en"><img src="images/logotipo-de-twitter.png" alt="Twitter"></a>
-                            <a href="https://www.instagram.com/"><img src="images/instagram.png" alt="Instagram"></a>
-                        </div>
-                    </div>
-
-                    <div class="col-6 col-md-4 mb-3">
-                        <form class="subscribe-form mt-3">
-                            <h5>Subscribe to our newsletter</h5>
-                            <p>Monthly digest of what's new and exciting from us.</p>
-                            <div class="d-flex flex-column w-100 gap-2">
-                                <label for="newsletter1" class="visually-hidden">Email address</label>
-                                <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
-                                <button class="btn btn-primary mt-2" type="button">Subscribe</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
+    <footer class="d-flex flex-wrap justify-content-between mx-0 align-items-center px-5 py-5"
+            style="background-color: rgb(239,239,239)">
+        <div class="col-md-4 d-flex align-items-center my-2" style="text-align: left">
+            <span class="mb-md-0 text-body-secondary lh-5 mb-0">
+                © 2023 CyberCore Technology, Inc. <br> All rights reserved.
+                <br>
+                <span class="lh-1" id="datetime"></span>
+            </span>
         </div>
 
-        <div class="row mt-4">
-            <div class="col-md-6">
-                <ul class="list-unstyled d-flex justify-content-end">
-                    <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
-                    <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
-                    <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-                </ul>
-            </div>
+        <div class="col-md-4 d-flex align-center justify-content-center my-2">
+            <img class="col-md-4 d-flex align-items-center object-fit-contain" src="images/company_logo.png" style="height: 45px">
         </div>
 
-        <div class="row mt-4">
-            <div class="col-md-6">
-                <h5>Quick links</h5>
-                <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-white">Home</a></li>
-                    <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-white">Features</a></li>
-                    <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-white">Pricing</a></li>
-                    <li class="nav-item mb-2"><a href="service.html" class="nav-link p-0 text-white">FAQs</a></li>
-                    <li class="nav-item mb-2"><a href="About.html" class="nav-link p-0 text-white">About</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</footer>
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex my-2">
+            <li class="me-3" style="font-size: 20px"><a class="text-body-secondary" href="#"><i class="fa-brands fa-instagram"></i></a></li>
+            <li class="me-3" style="font-size: 20px"><a class="text-body-secondary" href="#"><i class="fa-brands fa-twitter"></i></a></li>
+            <li class="me-3" style="font-size: 20px"><a class="text-body-secondary" href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+        </ul>
+    </footer>
 
 <script>
     // JavaScript Automated Date 
